# alys

./: .claude.json  .dockerignore  .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  JUNIOR_RUST_ENGINEER_GUIDE.md  QUICK_START_GUIDE.md  README.md  actor-model-implementation-status-08242025.knowledge.md  commit.sh  deadlock.knowledge.md  docker-compose.monitoring.yml  issue_1-phase_5.knowledge.md  issue_1-phase_6.knowledge.md  testing-framework-qa-onboarding2.knowledge.md
app/: Cargo.toml  build.rs
app/benches/: actor_system_benchmarks.rs  adapter_benchmarks.rs  chain_actor_benchmarks.rs  health_benchmarks.rs  registry_benchmarks.rs  supervision_benchmarks.rs  sync_benchmarks.rs
app/docs/v2/: alys-sync-actor-guide.knowledge.md
app/proto/: governance.proto
app/src/: app.rs  aura.rs  auxpow.rs  auxpow_miner.rs  block.rs  block_candidate_cache.rs  block_hash_cache.rs  chain.rs  engine.rs  engine_v2.rs  error.rs  lib.rs  main.rs  metrics.rs  rpc.rs  serde_utils.rs  signatures.rs  spec.rs  store.rs
app/src/actors/: bridge_actor.rs  chain_actor.rs  chain_actor_handlers.rs  chain_actor_supervision.rs  chain_actor_tests.rs  chain_migration_adapter.rs  engine_actor.rs  enhanced_actor_example.rs  inter_actor_metrics.rs  mod.rs  network_actor.rs  storage_actor.rs  stream_actor.rs  stream_actor_metrics.rs  supervisor.rs  sync_actor.rs
app/src/actors/chain/: actor.rs  config.rs  messages.rs  metrics.rs  migration.rs  mod.rs  state.rs  supervision.rs  validation.rs
app/src/actors/chain/handlers/: auxpow_handlers.rs  block_handlers.rs  consensus_handlers.rs  mod.rs  peg_handlers.rs
app/src/actors/chain/tests/: integration_tests.rs  mock_helpers.rs  mod.rs  performance_tests.rs  unit_tests.rs
app/src/actors/engine/: actor.rs  client.rs  config.rs  engine.rs  integration.rs  messages.rs  metrics.rs  mod.rs  state.rs  supervision.rs  validation.rs
app/src/actors/foundation/: adapters.rs  config.rs  constants.rs  health.rs  metrics.rs  mod.rs  registry.rs  restart_strategy.rs  root_supervisor.rs  supervision.rs  system_startup.rs  utilities.rs
app/src/actors/governance_stream/: actor.rs  config.rs  error.rs  messages.rs  mod.rs  protocol.rs  reconnect.rs  types.rs
app/src/actors/network/: mod.rs  supervisor.rs
app/src/actors/storage/: actor.rs  cache.rs  database.rs  indexing.rs  messages.rs  metrics.rs  mod.rs
app/src/actors/sync/: actor.rs  checkpoint.rs  config.rs  errors.rs  messages.rs  metrics.rs  mod.rs  network.rs  optimization.rs  peer.rs  processor.rs
app/src/block_candidate/: block_candidate_cache.rs  candidate_state.rs  mod.rs
app/src/config/: actor_config.rs  alys_config.rs  bridge_config.rs  chain_config.rs  governance_config.rs  hot_reload.rs  mod.rs  network_config.rs  storage_config.rs  sync_config.rs
app/src/features/: audit.rs  cache.rs  config.rs  context.rs  evaluation.rs  manager.rs  metrics.rs  mod.rs  performance.rs  phase4_tests.rs  tests.rs  types.rs  validation.rs  validation_test.rs  validation_tests.rs  watcher.rs
app/src/features/tests/: mod.rs  phase4_integration_tests.rs
app/src/integration/: bitcoin.rs  ethereum.rs  execution.rs  governance.rs  mod.rs  monitoring.rs
app/src/messages/: bridge_messages.rs  chain_messages.rs  mod.rs  network_messages.rs  storage_messages.rs  stream_messages.rs  sync_messages.rs  system_messages.rs
app/src/metrics/: actor_integration.rs
app/src/network/: error.rs  mod.rs
app/src/network/rpc/: config.rs  handler.rs  methods.rs  mod.rs  outbound.rs  protocol.rs  rate_limiter.rs  self_limiter.rs
app/src/testing/: actor_harness.rs  chaos_testing.rs  fixtures.rs  mocks.rs  mod.rs  property_testing.rs  test_utilities.rs
app/src/types/: blockchain.rs  bridge.rs  consensus.rs  errors.rs  mod.rs  network.rs
app/src/workflows/: block_import.rs  block_production.rs  mod.rs  peg_workflow.rs  sync_workflow.rs
crates/actor_system/: Cargo.toml
crates/actor_system/k8s/: Dockerfile.test-runner  README.md  healthcheck.sh  mock-services.yaml  monitoring.yaml  namespace.yaml  test-config.toml  test-deployment.yaml  test-jobs.yaml
crates/actor_system/src/: actor.rs  actor_macros.rs  blockchain.rs  bus.rs  error.rs  integration_tests.rs  lib.rs  lifecycle.rs  mailbox.rs  message.rs  metrics.rs  prelude.rs  prometheus_integration.rs  registry.rs  serialization.rs  supervision_tests.rs  supervisor.rs  supervisors.rs  system.rs  testing.rs
crates/federation/: Cargo.toml
crates/federation/src/: bitcoin_signing.rs  bitcoin_stream.rs  lib.rs
crates/federation_v2/: Cargo.toml
crates/federation_v2/src/: coordinator.rs  error.rs  lib.rs
crates/lighthouse_compat/: Cargo.toml
crates/lighthouse_compat/src/: ab_test.rs  compat.rs  config.rs  config_migration.rs  conversion.rs  engine.rs  error.rs  health.rs  lib.rs  metrics.rs  migration.rs  recovery.rs  testing.rs  types.rs
crates/lighthouse_wrapper/: Cargo.toml
crates/lighthouse_wrapper/src/: lib.rs
crates/lighthouse_wrapper_v2/: Cargo.toml
crates/lighthouse_wrapper_v2/src/: compatibility.rs  error.rs  lib.rs  metrics.rs  migration.rs  testing.rs
crates/miner/: Cargo.toml
crates/miner/src/: main.rs
crates/sync_engine/: Cargo.toml
crates/sync_engine/src/: engine.rs  error.rs  lib.rs
tests/: Cargo.toml  Dockerfile.test-coordinator  docker-compose.test.yml
tests/benches/: actor_benchmarks.rs  sync_benchmarks.rs  system_benchmarks.rs
tests/migrations/: 20240101000001_initial_schema.sql
tests/scripts/: run_comprehensive_tests.sh
tests/src/: lib.rs  property_tests.rs  reporting.rs
tests/src/framework/: chaos.rs  config.rs  generators.rs  metrics.rs  mod.rs  performance.rs  validators.rs
tests/src/framework/harness/: actor.rs  governance.rs  lighthouse.rs  mod.rs  network.rs  sync.rs
tests/src/templates/: report_template.html
tests/test-config/: bitcoin.conf  chain-test.json  jwt.hex  prometheus-test.yml  test-coordinator.toml
tests/test-config/grafana/datasources/: prometheus.yml
tests/tests/: governance_signature_property_tests.rs  minimal_property_tests.rs  property_test_validation.rs  sync_checkpoint_property_tests.rs
(+233 files in other folders)
