[workspace]
members = [
    "app", 
    "crates/federation", 
    "crates/federation_v2",
    "crates/lighthouse_wrapper", 
    "crates/lighthouse_wrapper_v2",
    "crates/miner",
    "crates/actor_system",
    "crates/sync_engine"
]

resolver = "2"

[workspace.dependencies]
futures = "0.3.26"
tracing = "0.1.0"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
thiserror = "1.0"
serde = { version = "1", features = ["derive"] }
serde_derive = "1.0.116"
eyre = "0.6"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4.3"

# V2 Actor System dependencies
actix = "0.13"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
num_cpus = "1.0"
toml = "0.8"
serde_json = "1.0"

# bitcoin
bitcoin = "0.30.0"
bitcoincore-rpc = "0.17"

# ethereum
ethereum-types = "0.14.1"
ethers-core = "2.0.11"
ethers = "2.0.11"

prometheus = "0.13.4"
lazy_static = "1.5.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
