[package]
name = "app"
version = "0.1.0"
edition = "2021"

[dependencies]

# lighthouse
#execution_layer = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
#sensitive_url = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
#types = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
#store = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
#bls = { git = "https://github.com/sigp/lighthouse", branch = "stable" }
#execution_layer = { git = "https://github.com/sigp/lighthouse", rev = "441fc16" }
#sensitive_url = { git = "https://github.com/sigp/lighthouse", rev = "441fc16" }
#types = { git = "https://github.com/sigp/lighthouse", rev = "441fc16" }
#store = { git = "https://github.com/sigp/lighthouse", rev = "441fc16" }
#bls = { git = "https://github.com/sigp/lighthouse", rev = "441fc16" }

lighthouse_wrapper = { package = "lighthouse_wrapper", path = "../crates/lighthouse_wrapper" }



# workspace
bridge = { package = "federation", path = "../crates/federation" }
actor_system = { path = "../crates/actor_system" }
sync_engine = { path = "../crates/sync_engine" }
federation_v2 = { path = "../crates/federation_v2" }
lighthouse_wrapper_v2 = { path = "../crates/lighthouse_wrapper_v2" }

# misc
clap = { workspace = true }
eyre = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-futures = "0.2"
strum = { version = "0.26", features = ["derive"] }
thiserror = { workspace = true }
slog = { version = "2", features = ["max_level_trace", "release_max_level_trace"] }
snap = "1"
smallvec = "1"
unsigned-varint = { version = "0.6", features = ["codec"] }
ssz_types = "0.5"
regex = "1"
fnv = "1"
rand = "0.8.5"
once_cell = "1.19.0"
prometheus = { workspace = true }
lazy_static = { workspace = true }
svix-ksuid = "0.8.0"
sysinfo = "0.30"

# feature flags
chrono = { workspace = true, features = ["serde"] }
ipnetwork = "0.20"
notify = "6.1"

# async
futures = { workspace = true }
futures-timer = "3.0.1"
tokio = { workspace = true, features = ["time"] }
tokio-util = { version = "0.6", features = ["codec", "compat", "time"] }
tokio-io-timeout = "1"
async-trait = { workspace = true }

# V2 Actor System
actix = { workspace = true }
uuid = { workspace = true }
num_cpus = { workspace = true }
toml = { workspace = true }

# storage
leveldb = { version = "0.8" }

# encoding
ethereum_ssz = { version = "0.5", features = ["arbitrary"] }
ethereum_ssz_derive = "0.5"
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = "1.0.94"
rmp-serde = "1.1.2"

# ethereum
superstruct = "0.6"
tree_hash = "0.5"
tree_hash_derive = "0.5"
ethereum-types = { workspace = true }
ethers-core = { workspace = true }
ethers = { workspace = true }

# bitcoin
bitcoin = { workspace = true, features = ["serde"] }

# networking
hyper = { version = "0.14", features = ["full"] }
rust_decimal = { version = "1.37.1", features = ["macros"] }

[dependencies.libp2p]
version = "0.52"
default-features = false
features = ["identify", "yamux", "mdns", "noise", "gossipsub", "dns", "tcp", "tokio", "plaintext", "secp256k1", "macros", "ecdsa", "quic"]

[dev-dependencies]
tempfile = "3.8.1"
criterion = { version = "0.5", features = ["html_reports"] }
sha2 = "0.10"

[[bench]]
name = "sync_benchmarks"
harness = false
