[package]
name = "actor_system"
version = "0.1.0"
edition = "2021"
description = "Core actor framework for Alys blockchain"
license = "MIT OR Apache-2.0"

[dependencies]
actix = "0.13"
actix-rt = "2.10"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"
parking_lot = "0.12"
crossbeam = "0.8"
dashmap = "5.5"
once_cell = "1.19"

[dev-dependencies]
tokio-test = "0.4"
criterion = "0.5"

# [[bench]]
# name = "actor_benchmarks"
# harness = false