[package]
name = "federation_v2"
version = "0.1.0"
edition = "2021"
description = "Enhanced federation system for Alys governance integration"
license = "MIT OR Apache-2.0"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
async-trait = "0.1"

# Cryptography
secp256k1 = "0.29"
bitcoin = "0.31"
sha2 = "0.10"
bls = "0.4"

# Network and gRPC
tonic = "0.12"
prost = "0.13"
tokio-stream = "0.1"

# Data structures
dashmap = "5.5"
parking_lot = "0.12"
lru = "0.12"

# Database
rocksdb = "0.22"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"

[[bin]]
name = "federation_node"
path = "src/bin/federation_node.rs"