[package]
name = "miner"
version = "0.1.0"
edition = "2021"

[dependencies]
# we use the jsonrpc that is reexported here (saves one dependency)
bitcoincore-rpc = { workspace = true }
serde = { workspace = true }
eyre = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
hex = { workspace = true }
app = {  path = "../../app" }
